# IFJ

./: .gitignore  CMakeLists.txt  IFJ 2016.mup  Makefile  README.md  dstring.h  error.c  error.h  ial.c  ial.h  instruction_list.c  instruction_list.h  instructions.h  inter_idea_recursion.c  inter_idea_recursion.h  inter_table.c  inter_table.h  interpret-expr-test  interpret-expr-test.c  interpret-fib.c  interpret-relation-test.c  interpret-str-test  interpret-str-test.c  interpret.c  interpret.h  interpret_idea.c  main.c  main.cpp  op-parser.c  op-parser.h  parser.c  parser.h  parserOLD.c  read_test.c  realparser.c  scanner-unit.c  scanner-unit_alt.c  scanner.c  scanner.h  scanner_alt.c  (+12 more)
adio_old_stuff/: inter_idea_recursion.c  inter_table.c  inter_table.h  interpret.c  interpret.h  interpret_idea.c  read_test.c
doc/: LL grammar.txt  dokumentace.docx  prezentacia.pptx
op_prec_parser/: Makefile  input_test.txt  op-parser-unit.c  op-parser.c  op-parser.h  parser  test.sh  test_op_parser.sh
op_prec_parser/error/: error.c
op_prec_parser/error_op/: error_op.c  error_op.h
op_prec_parser/generate_expr/: Makefile  expr_generator.c  generate  test.txt
op_prec_parser/op-parser/: op-parser.c  op-parser.h
op_prec_parser/scanner/: ial.h  str.h
op_prec_parser/utils/: TODO  dynamic_stack.c  dynamic_stack.h  stack-test.c
stack/: Makefile  op-parser.c
stack/scanner/: .scanner.c.swp  scanner.c  scanner.h  str.c
tests/: README  compare.sh  test01.java  test01.java.output  test02.java  test04.java  test05.java  test06.java  test07.java  test08.java  test09.java  test10.java  test11.java
tests/error_test/: 30-NK2-nestaticka_funkce.ifj  31-NK2-promenna_je_pojmenovana_klicovym_slovem.ifj  48-NK2-chybi_prava_zavorka.ifj  49-NK3-redefinice_funkce.ifj  50-NK2-navic_prava_zavorka.ifj  test01.java  test02.java  test03.java  test04.java  test05.java  test06.java  test07.java  test08.java  test09.java  test10.java  test11.java  test14.java  test19.java  test20.java  test25.java  test50.java  test51.java  test52.java  test53.java  test54.java  test55.java  test58.java  test61.java  test65.java  test66.java  test93.java  test_error12.java  test_error14.java  test_error15.java  test_error29.java  test_error8.java
tests/good_test/: 94-NK0-retezce_konkatenace_s_return.ifj  ex5_simple_arithmetic.ifj  test02.java.out  test04.java.out  test06.java  test08.java  test11.java  test25.java  test28.java  test33-bug.java  test33.java
tests/runtime_error/: test01.java  test02.java  test04.java  test28.java  test60.java
